# tree-sitter-prisma

./: .eslintignore  .eslintrc.js  .gitignore  .npmrc  Cargo.toml  README.md  binding.gyp  grammar.js  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yml
bindings/rust/: README.md  build.rs  lib.rs
corpus/: datasource_db.txt  model_post.txt
examples/: simple.prisma
src/: grammar.json  node-types.json  parser.c
ts-src/: grammar.ts
types/: tree-sitter-sdk.d.ts
