[package]
name = "tree-sitter-prisma"
description = "Primsa grammar for the tree-sitter parsing library"
version = "0.1.0"
authors = ["Luma <world@luma.email>"]
license = "UNLICENSE"
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "prisma"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-typescript"
edition = "2018"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust",
  "grammar.js",
  "src",
  "queries"
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">= 0.19, < 0.21"

[build-dependencies]
cc = "1.0"
